--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/platform-server": "^21.0.0",
     "@angular/router": "^21.0.0",
     "@angular/ssr": "^21.0.5",
+    "@antv/g2plot": "^2.4.35",
     "chart.js": "^4.5.1",
     "express": "^5.1.0",
     "ng2-charts": "^8.0.0",
